# lanceforge

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile.release  README.md  RELEASE_NOTES.md  audit.toml  demo.sh
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  dependencies.yml  dev.yml  dev_pr.yml  docker.yml  docs.yaml  nightly-soak-chaos.yml  nightly.yml  release-docker.yml  release.yml  rust.yml  sanitizers.yml
ballista-cli/: Cargo.toml
ballista/core/: Cargo.toml
ballista/scheduler/: Cargo.toml
benchmarks/: Cargo.toml  baseline.json  check_regression.py
chaos/: runner.py
chaos/results/: worker_kill_20260418_165741.json  worker_kill_20260418_170154.json  worker_kill_20260418_231235.json  worker_kill_20260419_131240.json  worker_kill_20260420_121556.json  worker_kill_20260420_145521.json  worker_kill_20260420_205845.json  worker_stall_20260418_165841.json  worker_stall_20260418_170459.json  worker_stall_20260418_231602.json  worker_stall_20260419_131550.json  worker_stall_20260420_121905.json  worker_stall_20260420_145845.json  worker_stall_20260420_210150.json
chaos/scenarios/: worker_kill.yaml  worker_stall.yaml
crates/admin/: Cargo.toml
crates/admin/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: audit.rs  auto_shard.rs  config.rs  ipc.rs  lib.rs  metrics.rs  persistent_state.rs  shard_pruning.rs  shard_state.rs  tls.rs  version.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: auth.rs  connection_pool.rs  embedding.rs  fragment_dispatch.rs  fragment_router.rs  ha.rs  lib.rs  merge.rs  rest.rs  scatter_gather.rs  service.rs  test_support.rs  worker_select.rs
crates/meta/: Cargo.toml
crates/meta/src/: ddl_lease.rs  lib.rs  schema_store.rs  session.rs  shard_manager.rs  state.rs  store.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/: cluster_control.proto  lance_service.proto
crates/proto/src/: descriptor.rs  lib.rs
crates/roles/: Cargo.toml
crates/roles/src/: common.rs  cp.rs  idx.rs  lib.rs  pe.rs  pe_idx.rs  qn.rs  qn_cp.rs
crates/worker/: Cargo.toml
crates/worker/src/: cache.rs  executor.rs  lib.rs  service.rs
deploy/grafana/: README.md  lanceforge.json
deploy/helm/lanceforge/: Chart.yaml  values.yaml
deploy/helm/lanceforge/templates/: _helpers.tpl  configmap.yaml  coordinator-deployment.yaml  coordinator-pdb.yaml  coordinator-service.yaml  serviceaccount.yaml  worker-hpa.yaml  worker-pdb.yaml  worker-service.yaml  worker-statefulset.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_V2.md  ARCHITECTURE_V2_PLAN.md  ARCHITECTURE_V3_SINGLE_DATASET.md  BENCHMARK.md  BUILD_HYGIENE.md  CI_MATRIX.md  COMPAT_POLICY.md  COMPETITIVE_ANALYSIS.md  CONFIG.md  COVERAGE_MATRIX.md  DEPLOYMENT.md  HARDENING_PLAN.md  LIMITATIONS.md  OBSERVABILITY.md  OPERATIONS.md  PERF_LARGE_K.md  PHASE17_SUMMARY.md  PROFILE_MIXED_RW.md  QUICKSTART.md  REALIGNMENT_PARITY_CHECKLIST.md  REALIGNMENT_PARITY_REPORT.md  REALIGNMENT_PLAN.md  RELEASE.md  ROADMAP_0.2.md  SECURITY.md  SESSION_HANDOFF.md  STATELESS_INVARIANTS.md  TROUBLESHOOTING.md
docs/adr/: ADR-001-single-primary-writer.md  ADR-002-cold-start-strategy.md  ADR-003-scalar-index-replaces-hash-routing.md  ADR-004-ddl-lease-scope.md  ADR-005-migration-guarantees.md
docs/archive/: HARDENING_PLAN_alpha.md  PLAN_phase1-7.md  README.md  RELEASE_PLAN_0.2_BETA.md
examples/rag_beir/: README.md  run_beir_scifact.py
examples/rag_beir/results/: RESULTS.md  results.json
lance-integration/: Cargo.toml  DESIGN_LANCEDB_MIGRATION.md  Dockerfile  PLAN.md  README.md  build.rs  docker-compose.yaml  docker-entrypoint.sh
lance-integration/bench/: .gitignore  README.md  ann_bench_wrapper.py  bench_competitor_baseline.py  bench_cosine.py  bench_filtered.py  bench_highdim.py  bench_hybrid_ndcg.py  bench_phase17_matrix.py  bench_phase17_mixed.py  bench_scale.py  bench_shard_scaling.py  bench_standard.py  bench_sustained_load.py  recall_benchmark.py  run_all.py
lance-integration/bench/results/phase17/: mixed_s3_minio_20260420_183327.json
lance-integration/sdk/python/: README.md  setup.py
lance-integration/sdk/python/lanceforge/: __init__.py  async_client.py  client.py  lance_service_pb2.py  lance_service_pb2_grpc.py  langchain.py
lance-integration/sdk/python/tests/: test_async_client_unit.py  test_client_unit.py
lance-integration/src/: lib.rs  scheduler.rs
lance-integration/tests/: phase0_rerank.rs  phase1_fungible.rs  phase2_single_dataset.rs  phase3_single_writer.rs  poc_fragment_fanout.rs  poc_gate2_bench.rs  poc_gate2_e2e.rs  test_benchmark.rs  test_data_freshness.rs  test_distributed_ann.rs  test_durability.rs  test_edge_cases.rs  test_grpc_distributed.rs  test_ha.rs  test_multi_table.rs  test_shard_routing.rs  test_text_query.rs
lance-integration/tools/: benchmark.py  e2e_add_upsert_consistency_test.py  e2e_alter_table_test.py  e2e_audit_dropped_test.py  e2e_beta2_ns_audit_test.py  e2e_beta3_rest_trace_test.py  e2e_blackbox_validation.py  e2e_cluster_test.py  e2e_commit_seq_test.py  e2e_compact_test.py  e2e_enterprise_test.py  e2e_full_capability_test.py  e2e_full_system_test.py  e2e_h25_coord_uptime_test.py  e2e_ha_test.py  e2e_minio_sse_test.py  e2e_minio_test.py  e2e_monolith_test.py  e2e_multi_coord_test.py  e2e_new_crates_test.py  e2e_phase11_test.py  e2e_phase12_test.py  e2e_phase13_test.py  e2e_phase14_test.py  e2e_phase15_test.py  e2e_phase16_test.py  e2e_rag_validation.py  e2e_rebalance_test.py  e2e_replica_test.py  e2e_schema_evolution_test.py  e2e_tags_test.py  e2e_tls_test.py  e2e_write_test.py  gen_test_certs.sh  lance_distributed_client.py  lance_service_pb2.py  lance_service_pb2.pyi  lance_service_pb2_grpc.py  pyproject.toml  run_all_e2e.sh  (+4 more)
scripts/: gen-proto-stubs.sh  release.sh
soak/: run.py
soak/results/: soak_15min_20260418_171559.json  soak_5min_20260418_172340.json  soak_60min_20260419_130316.json  soak_60min_20260420_161244.json
