[package]
name = "lance-admin"
version = "0.2.0-beta.2"
edition = "2024"
license = "Apache-2.0"
description = "LanceForge operator CLI — metastore backup / restore / inspection."

[[bin]]
name = "lance-admin"
path = "src/main.rs"

[dependencies]
lance-distributed-common = { path = "../common" }
lance-distributed-meta = { path = "../meta" }

clap = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }

[dev-dependencies]
tempfile = "3"
