[package]
name = "lance-distributed-common"
version = "0.2.0-beta.2"
edition = "2024"
license = "Apache-2.0"

[dependencies]
lance-distributed-proto = { path = "../proto" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
log = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "fs", "io-util"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
async-trait = { workspace = true }
arrow = { workspace = true }

# For auto-shard fragment discovery
lance = { version = "4.0.0", default-features = false, features = ["aws"] }
# B2: OBS-native audit-log writer (put-per-batch model)
object_store = { workspace = true }
url = "2"
bytes = "1"

[dev-dependencies]
tempfile = { workspace = true }
