[package]
name = "lance-distributed-coordinator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "lance-coordinator"
path = "src/bin/main.rs"

[dependencies]
lance-distributed-proto = { path = "../proto" }
lance-distributed-common = { path = "../common" }

# LanceDB (embedding, reranker)
lancedb = { version = "0.27", default-features = false }

# DataFusion + Arrow
datafusion = { workspace = true }
arrow = { workspace = true }

# Async + gRPC
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
