[package]
name = "lance-distributed-coordinator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "lance-coordinator"
path = "src/bin/main.rs"

[dependencies]
lance-distributed-proto = { path = "../proto" }
lance-distributed-common = { path = "../common" }
lance-distributed-meta = { path = "../meta" }

# LanceDB (embedding, reranker)
lancedb = { version = "0.27", default-features = false }

# DataFusion + Arrow
datafusion = { workspace = true }
arrow = { workspace = true }

# Async + gRPC
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde_yaml = "0.9"
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
