[package]
name = "lance-distributed-coordinator"
version = "0.2.0-beta.4"
edition = "2024"
license = "Apache-2.0"

# Binary moved to crates/roles (`src/bin/coordinator.rs`) in Phase A of
# the v2 architecture. This crate is library-only. See
# docs/ARCHITECTURE_V2_PLAN.md.

[dependencies]
lance-distributed-proto = { path = "../proto" }
lance-distributed-common = { path = "../common" }
lance-distributed-meta = { path = "../meta" }

# Lance (dataset fragment enumeration for single-dataset fanout) +
# LanceDB (embedding, reranker)
lance = { version = "4.0.0", default-features = false, features = ["aws"] }
lancedb = { version = "0.27", default-features = false }

# DataFusion + Arrow
datafusion = { workspace = true }
arrow = { workspace = true }

# Async + gRPC
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
rustls = { version = "0.23", features = ["ring"] }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# B3: optional OpenTelemetry OTLP exporter. Feature-gated to keep the
# default build light; enable with `cargo build --features otel`.
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
proptest = "1"
tempfile = { workspace = true }
tokio-stream = { workspace = true }
