[package]
name = "lance-distributed-meta"
version = "0.2.0-beta.4"
edition = "2024"
license = "Apache-2.0"

[dependencies]
lance-distributed-proto = { path = "../proto" }
lance-distributed-common = { path = "../common" }

serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { workspace = true, features = ["full"] }
log = { workspace = true }
async-trait = { workspace = true }

# S3MetaStore
object_store = { workspace = true }
url = "2"

# Cross-process advisory file lock for FileMetaStore to prevent multi-coordinator
# split-brain when the same metadata file is shared via NFS/shared volume.
fs4 = "1.0"

# Phase C.2 schema_store: Arrow IPC bytes go through MetaStore's &str
# put/get via base64. Already in the lockfile via transitive deps so
# nothing new lands in target/.
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
proptest = "1"
