[package]
name = "lance-distributed-roles"
version = "0.2.0-beta.4"
edition = "2024"
license = "Apache-2.0"
description = "Per-role runners (QN/PE/IDX/CP) composing LanceForge nodes. v2 architecture — see docs/ARCHITECTURE_V2_PLAN.md."

# Binary names preserved from pre-v2 so existing deploy scripts /
# Dockerfiles keep working unchanged. Phase E adds four more
# single-role bins (lance-qn / lance-pe / lance-idx / lance-cp).
[[bin]]
name = "lance-coordinator"
path = "src/bin/coordinator.rs"

[[bin]]
name = "lance-worker"
path = "src/bin/worker.rs"

[dependencies]
lance-distributed-proto = { path = "../proto" }
lance-distributed-common = { path = "../common" }
lance-distributed-meta = { path = "../meta" }
lance-distributed-coordinator = { path = "../coordinator" }
lance-distributed-worker = { path = "../worker" }

tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = { workspace = true }

# PE-side Lance runtime wants its own DataFusion SessionContext.
# Kept at workspace version so the major bumps land in one place.
datafusion = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
serde_yaml = "0.9"

# Match coordinator's optional OTLP support. With feature parity the
# monolith binary (Phase B) can enable otel via the same cargo flag.
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile = { workspace = true }
