[package]
name = "lance-distributed-worker"
version = "0.2.0-beta.4"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "lance-worker"
path = "src/bin/main.rs"

[dependencies]
lance-distributed-proto = { path = "../proto" }
lance-distributed-common = { path = "../common" }

# Lance + LanceDB
lance = { version = "4.0.0", default-features = false, features = ["aws"] }
lance-index = { version = "4.0.0", default-features = false }
lancedb = { version = "0.27", default-features = false, features = ["aws"] }

# DataFusion + Arrow
datafusion = { workspace = true }
arrow = { workspace = true }

# Async + gRPC
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.14", features = ["transport", "tls-native-roots"] }
tonic-prost = { workspace = true }
futures = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# C3: optional OpenTelemetry OTLP exporter, same gating pattern as
# the coordinator's B3. `cargo build --features otel` enables it.
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
default = []
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
